// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`лог васов залогирует показ сервисов на последней вкладке при попадании их в поле видимости 1`] = `
Object {
  "category": "cars",
  "event": "VAS_SHOW",
  "offerId": "1093704898-916ea010",
  "originalPrice": 999,
  "price": 777,
  "serviceId": "all_sale_toplist",
}
`;

exports[`лог васов правильно логирует событие показа при попадании кнопки в поле видимости 1`] = `
Object {
  "category": "cars",
  "event": "VAS_SHOW",
  "offerId": "1093704898-916ea010",
  "originalPrice": 999,
  "price": 777,
  "serviceId": "package_vip",
}
`;
